servicemesh/6.versioning/quarkus-destinationrule-v2.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: quarkus-app-destination-v2
spec:
  host: frontend-java-runner-service-v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: app-v2
    labels:
      version: v2
